# Galaxia

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Doxyfile  Makefile  Milkyway.galaxia  README.md  cmake_install.cmake
doc/: documentation
examples/scenarios/: Collision1.galaxia  Milkyway.galaxia  Square.galaxia
include/: fileio.h  galaxy.h  gnuplot_i.hpp  gravity.h  plot.h  scenarios.h  stars.h
src/: gravity.cpp  gravity.h  main.cpp
